--- a/app/Rmd/report_fish_FR.Rmd
+++ b/app/Rmd/report_fish_FR.Rmd
@@ -17,14 +17,14 @@ Description de l’ensemble de données (tirée du dossier des données ouvertes
 table_RV <- read.csv("../data/misc/table_RV_EN.csv")
 table_RV<- table_RV %>% dplyr::rename("Season/Months"=Season.Months,"Description of Geographic Range"=Description.of.Geographic.Range)
 ```
-```{r}
+```{r RV table setup}
 knitr::kable(table_RV, align="l",
       caption = "Summary of data collected during the 4 distinct Maritimes Research Vessel (RV) Surveys. See Chadwick et al. (2007) for more information on the timeline and periodic adjustment of the 4VSW surveys.", booktabs = T, escape = F, linesep="") %>% kable_styling(bootstrap_options = "striped", full_width = T, position = "left")
 ```
 
 #### ***Résultats des enquêtes sur les navires de recherche dans les Maritimes***
 
-```{r, include=FALSE, cache=FALSE}
+```{r RV results, include=FALSE, cache=FALSE}
   outputList <- point_intersect(RVCatch_sf, studyArea,speciestable = RVGSSPECIES,
                                mapBbox = bboxMap, Year = minYear)
 
@@ -37,7 +37,7 @@ if (!is.null(outputList)) {
 }
 ```
 *
-```{r, comment="", prompt=TRUE, echo=FALSE, results='asis'}
+```{r RV check, comment="", prompt=TRUE, echo=FALSE, results='asis'}
 Report_RV <- if (is.null(outputList)) {
     "There are no relevant records in the Maritimes Research Vessel (RV) Survey for this search area."
   } else {
@@ -47,19 +47,19 @@ Report_RV<-noquote(Report_RV)
 writeLines(Report_RV)
 ```
 
-```{r, fig.height=8, fig.width=11, fig.cap= 'Quality Tier: High. Security level: none. Map showing the search area defined by the user (red outline) used to query information from the Maritimes Research Vessel (RV) Trawl Survey. Black lines and arrows indicate the location and direction of each bottom otter trawl sample. Frequency represents number of trawls in which a given species was sampled, relative to the total number of trawls within the search area'}
+```{r RV plot, fig.height=8, fig.width=11, fig.cap= 'Quality Tier: High. Security level: none. Map showing the search area defined by the user (red outline) used to query information from the Maritimes Research Vessel (RV) Trawl Survey. Black lines and arrows indicate the location and direction of each bottom otter trawl sample. Frequency represents number of trawls in which a given species was sampled, relative to the total number of trawls within the search area'}
 if (!is.null(outputList)) {
 areaMap + geom_segment(aes(x = Samples_bbox$long, y = Samples_bbox$lat, xend = Samples_bbox$ELONG, yend = endy <- Samples_bbox$ELAT),arrow=arrow(length = unit(0.2,"cm")), size = 0.5)
 }
 ```
 <br>
-```{r}
+```{r RV SAR table}
 if (!is.null(outputList)) {
  knitr::kable(table_rv2, align="l", caption="\\label{tab:rv_SAR_table} Quality Tier: High. Security level: none. Maritimes Research Vessel (RV) Survey observation records of species contained within the search area and listed by the <i>Species At Risk Act</i> (SARA), species assessed by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC), or species included in the Wild species listing (B=Breeding, N=non-breeding, M=migratory). <b>The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area.</b>", booktabs = T, escape = F, linesep="") %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
 }
 ```
 <br>
-```{r}
+```{r RV freq table}
 if (!is.null(outputList)) {
 knitr::kable(table_rv1, align="l", caption="\\label{tab:rv_freq_table}Quality Tier: High. Security level: none. Maritimes Research Vessel (RV) Survey observation records of <u>all species</u> contained within the search area, summarized by species or species group. <b>The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area.</b>", booktabs = T, escape = F, linesep="") %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
 }
