--- a/app/Rmd/intro_FR.Rmd
+++ b/app/Rmd/intro_FR.Rmd
@@ -37,7 +37,7 @@ load("../data/SecureData.RData")
 lapply(list.files("../R", pattern = ".[Rr]$", full.names = TRUE),source) # check helpers.R for a list of packages
 ```
 
-```{r Search Area and setup.R, echo=FALSE, include=FALSE, cache=FALSE}
+```{r Load Search Area, echo=FALSE, include=FALSE, cache=FALSE}
 studyArea <- sf::st_read("{{path_to_geoms}}")
 # studyArea <- sf::st_read("geoms_slc.geojson")
 # Uncomment the following to test fixed polygon:
@@ -89,7 +89,7 @@ Ce document résume les données régionales, y compris les renseignements sur l
 
 Le présent document est conçu comme un outil de rapport reproductible, appuyé par le langage de balisage R et généré par une interface d’application R-Shiny hébergée sur le réseau du MPO. Les résumés et les résultats des rapports sont basés sur des données extraites d’une zone de recherche fournie par l’utilisateur (un polygone d’intérêt focal) avec un tampon défini par l’utilisateur (figure x). Les instructions d’utilisation de l’interface R-Shiny sont fournies dans le manuel technique. En raison du caractère sensible potentiel de certaines données et informations, l’accès aux données de l’application doit être accordé, et le rapport est destiné à un usage interne uniquement.  
 
-````{r, fig.height=8, fig.width=11, fig.cap='Carte montrant la zone de recherche définie par l’utilisateur (entourée en rouge) pour rechercher des informations et générer automatiquement ce rapport. '}
+````{r area map plot, fig.height=8, fig.width=11, fig.cap='Carte montrant la zone de recherche définie par l’utilisateur (entourée en rouge) pour rechercher des informations et générer automatiquement ce rapport. '}
 areaMap
 # areaMap can be plotted once and then reused for other plots
 ```
@@ -116,7 +116,7 @@ Le présent rapport comprend des renseignements provenant de diverses sources ay
 ```{r table tiers read, echo=FALSE, cache=FALSE, include = FALSE}
 table_tier <- read.csv("../data/misc/table_tiers_EN.csv")
 ```
-```{r}
+```{r tier table}
 knitr::kable(table_tier,align="l",
       caption = "La définition des niveaux de qualité pour décrire les sources d’information interrogées et résumées dans ce rapport.", booktabs = T, escape = F, linesep="") %>% kable_styling(bootstrap_options = "striped", full_width = T, position = "left")
 ```
