--- a/app/Rmd/report_SARA_EN.Rmd
+++ b/app/Rmd/report_SARA_EN.Rmd
@@ -34,15 +34,15 @@ Critical habitat presented in this section are available in the Government of Ca
 
 #### ***Area-specific SAR distribution and critical habitat search results***
 
-```{r echo=FALSE, results='asis'}
+```{r sardist load, echo=FALSE, results='asis'}
 #if(sardist_sf > 1){
-dist_table<-table_dist(sardist_sf, studyArea)
+dist_table <- table_dist(sardist_sf, studyArea)
 #} else {NULL}
 ```
 *
 ```{r dist result, comment="", prompt=TRUE, echo=FALSE, results='asis'}
-Dist_overlap_result<-nrow(dist_table)
-Query_output_dist<-if(Dist_overlap_result < 1){
+Dist_overlap_result <- nrow(dist_table)
+Query_output_dist <- if(Dist_overlap_result < 1){
   "The search area does not overlap with Species at Risk distribution range."
 } else {
   "The search area overlaps with Species at Risk distribution range."
@@ -50,13 +50,13 @@ Query_output_dist<-if(Dist_overlap_result < 1){
 writeLines(Query_output_dist)
 ```
 
-```{r echo=FALSE, results='asis'}
-crit_table<-table_crit(ClippedCritHab_sf, studyArea, leatherback_sf)
+```{r leatherback table, echo=FALSE, results='asis'}
+crit_table <- table_crit(ClippedCritHab_sf, studyArea, leatherback_sf)
 ```
 *
-```{r crit result, comment="", prompt=TRUE, echo=FALSE, results='asis'}
- crit_result<-nrow(crit_table)
- Query_output_crit<-if(crit_result < 1){
+```{r crit check, comment="", prompt=TRUE, echo=FALSE, results='asis'}
+ crit_result <- nrow(crit_table)
+ Query_output_crit <- if(crit_result < 1){
    "The search area does not overlap with defined Species at Risk Critical Habitat."
  } else {
    "The search area overlaps with defined Species at Risk Critical Habitat."
@@ -64,63 +64,63 @@ crit_table<-table_crit(ClippedCritHab_sf, studyArea, leatherback_sf)
  writeLines(Query_output_crit)
 ```
 
-```{r echo=FALSE, results='asis'}
-Dist_query_output_table<-if(Dist_overlap_result < 1){
+```{r dist?,  echo=FALSE, results='asis'}
+Dist_query_output_table <- if(Dist_overlap_result < 1){
   ""
 } else {
 }
 if(Dist_overlap_result > 1){Dist_query_output_table}
 ```
 
-```{r echo=FALSE, results='asis'}
+```{r crit table, echo=FALSE, results='asis'}
 crit_table <- unique( crit_table[ , 1:3 ] )
-Crithab_query_output_table<-if(crit_result <= 1){
+Crithab_query_output_table <- if(crit_result <= 1){
   ""
 } else {
-  knitr::kable(crit_table, caption="Quality Tier: High. Security level: none. Species At Risk listed as Endangered or Threatened under the <i>Species At Risk Act</i> (SARA) for which the search polygon overlaps with their critical habitat. Critical habitat is defined under section 2 of SARA as: “the habitat that is necessary for the survival or recovery of a listed wildlife species and that is identified as the species’ critical habitat in the recovery strategy or in an action plan for the species”. Critical Habitat is identified in a species’ recovery strategy or action plan, posted on the [SAR Public Registry](http://www.sararegistry.gc.ca). This is <b>not</b> the authoritative source or advice for Species At Risk data. Please access the Species At Risk [GIS tool](http://dfonl7swvgip001.ent.dfo-mpo.ca/Html5Viewer/index.html?viewer=NationalSARMap_EN&LayerTheme=0&locale=en-US) to create an authoritative SARA report.", booktabs = T, escape = F, linesep="")} %>% kable_styling(bootstrap_options = "striped", full_width = T, position = "left")
+  knitr::kable(crit_table, caption="Quality Tier: High. Security level: none. Species At Risk listed as Endangered or Threatened under the <i>Species At Risk Act</i> (SARA) for which the search polygon overlaps with their critical habitat. Critical habitat is defined under section 2 of SARA as: “the habitat that is necessary for the survival or recovery of a listed wildlife species and that is identified as the species’ critical habitat in the recovery strategy or in an action plan for the species”. Critical Habitat is identified in a species’ recovery strategy or action plan, posted on the [SAR Public Registry](http://www.sararegistry.gc.ca). This is <b>not</b> the authoritative source or advice for Species At Risk data. Please access the Species At Risk [GIS tool](http://dfonl7swvgip001.ent.dfo-mpo.ca/Html5Viewer/index.html?viewer=NationalSARMap_EN&LayerTheme=0&locale=en-US) to create an authoritative SARA report.", booktabs = T, escape = F, linesep = "")} %>% kable_styling(bootstrap_options = "striped", full_width = T, position = "left")
 if(crit_result > 0){Crithab_query_output_table}
 ```
 
 
-```{r echo=FALSE, results='asis'}
+```{r crithab plot setup, echo=FALSE, results='asis'}
 # define polygon dataset and attribute to plot!
-poly_sf=ClippedCritHab_sf
-attribute="Common_Nam"
-legend_name = "Common Name"
+poly_sf <- ClippedCritHab_sf
+attribute <- "Common_Nam"
+legend_name <- "Common Name"
 
 # intersect polyData with 3 polygons (region, map area, and study box)
-clipped <- poly_intersect(poly_sf,Region,studyArea, bboxMap)
+clipped <- poly_intersect(poly_sf, Region, studyArea, bboxMap)
 ```
 
-```{r, fig.cap='Quality Tier: High. Security level: none. This map summarizes critical habitat of Species At Risk listed as Endangered or Threatened under the <i>Species At Risk Act</i> (SARA) in the Scotian Shelf Bioregion. Please see table below for complimentary information. Critical habitat is defined under section 2 of SARA as: “the habitat that is necessary for the survival or recovery of a listed wildlife species and that is identified as the species’ critical habitat in the recovery strategy or in an action plan for the species.” Critical Habitat is identified in a species’ recovery strategy or action plan, posted on the [SAR Public Registry](http://www.sararegistry.gc.ca). This is not the authoritative source or advice for Species At Risk data. Please access the Species At Risk [GIS tool](http://dfonl7swvgip001.ent.dfo-mpo.ca/Html5Viewer/index.html?viewer=NationalSARMap_EN&LayerTheme=0&locale=en-US) to create an authoritative report.', fig.height=6, fig.width=11}
+```{r crithab region plot, fig.cap='Quality Tier: High. Security level: none. This map summarizes critical habitat of Species At Risk listed as Endangered or Threatened under the <i>Species At Risk Act</i> (SARA) in the Scotian Shelf Bioregion. Please see table below for complimentary information. Critical habitat is defined under section 2 of SARA as: “the habitat that is necessary for the survival or recovery of a listed wildlife species and that is identified as the species’ critical habitat in the recovery strategy or in an action plan for the species.” Critical Habitat is identified in a species’ recovery strategy or action plan, posted on the [SAR Public Registry](http://www.sararegistry.gc.ca). This is not the authoritative source or advice for Species At Risk data. Please access the Species At Risk [GIS tool](http://dfonl7swvgip001.ent.dfo-mpo.ca/Html5Viewer/index.html?viewer=NationalSARMap_EN&LayerTheme=0&locale=en-US) to create an authoritative report.', fig.height=6, fig.width=11}
 if (!is.null(clipped$regionPoly)){
-  plot_polygons(regionMap,regionBox,studyBox_geom, clipped$regionPoly,attribute, legendName=legend_name)
+  plot_polygons(regionMap, regionBox, studyBox_geom, clipped$regionPoly, attribute, legendName = legend_name)
 }  
 ```
 
-```{r, fig.cap='Quality Tier: High. Security level: none. This map summarizes areas where the search polygon overlaps with critical habitat of Species At Risk listed as Endangered or Threatened under the <i>Species At Risk Act</i> (SARA)', fig.height=6, fig.width=11}
+```{r crithab area plot, fig.cap='Quality Tier: High. Security level: none. This map summarizes areas where the search polygon overlaps with critical habitat of Species At Risk listed as Endangered or Threatened under the <i>Species At Risk Act</i> (SARA)', fig.height=6, fig.width=11}
 if (!is.null(clipped$mapPoly)){
   plot_polygons(areaMap, bboxMap, studyBox_geom, clipped$mapPoly, attribute, legendName = legend_name)
 }  
 ```
 
 
-```{r echo=FALSE, results='asis'}
+```{r leatherback plot setup,  echo=FALSE, results='asis'}
 # define polygon dataset and attribute to plot
-poly_sf=leatherback_sf
-attribute="NONE"
+poly_sf <- leatherback_sf
+attribute <- "NONE"
 
 # intersect polyData with 3 polygons (region, map area, and study box)
-clipped <- poly_intersect(poly_sf,Region,studyArea, bboxMap)
+clipped <- poly_intersect(poly_sf, Region, studyArea, bboxMap)
 ```
 
-```{r, fig.cap='Quality Tier: High. Security level: none. This map summarizes draft critical habitat of Leatherback Sea Turtle in the Scotian Shelf Bioregion, relative to the search area.', fig.height=6, fig.width=11}
+```{r leatherback region plot, fig.cap='Quality Tier: High. Security level: none. This map summarizes draft critical habitat of Leatherback Sea Turtle in the Scotian Shelf Bioregion, relative to the search area.', fig.height=6, fig.width=11}
 if (!is.null(clipped$regionPoly)){
-  plot_polygons(regionMap,regionBox,studyBox_geom, clipped$regionPoly,attribute)
+  plot_polygons(regionMap, regionBox, studyBox_geom, clipped$regionPoly, attribute)
 }   
 ```
 
-```{r, fig.cap='Quality Tier: High. Security level: none. This map summarizes areas where the search polygon overlaps with draft critical habitat of Leatherback Sea Turtle', fig.height=6, fig.width=11}
+```{r leatherback area plot, fig.cap='Quality Tier: High. Security level: none. This map summarizes areas where the search polygon overlaps with draft critical habitat of Leatherback Sea Turtle', fig.height=6, fig.width=11}
 if (!is.null(clipped$mapPoly)){
   plot_polygons(areaMap, bboxMap, studyBox_geom, clipped$mapPoly,attribute)
 }  
