--- a/app/Rmd/report_SARA_FR.Rmd
+++ b/app/Rmd/report_SARA_FR.Rmd
@@ -34,15 +34,15 @@ Les habitats essentiels présentés dans cette section sont disponibles sur le p
 
 #### ***Répartition des espèces en péril et résultats des recherches sur l’habitat essentiel propres à une zone***
 
-```{r echo=FALSE, results='asis'}
+```{r sardist load, echo=FALSE, results='asis'}
 #if(sardist_sf > 1){
-dist_table<-table_dist(sardist_sf, studyArea)
+dist_table <- table_dist(sardist_sf, studyArea)
 #} else {NULL}
 ```
 *
 ```{r dist result, comment="", prompt=TRUE, echo=FALSE, results='asis'}
-Dist_overlap_result<-nrow(dist_table)
-Query_output_dist<-if(Dist_overlap_result < 1){
+Dist_overlap_result <- nrow(dist_table)
+Query_output_dist <- if(Dist_overlap_result < 1){
   "La zone de recherche ne chevauche pas l’aire de répartition des espèces en péril."
 } else {
   "La zone de recherche chevauche l’aire de répartition des espèces en péril."
@@ -50,13 +50,13 @@ Query_output_dist<-if(Dist_overlap_result < 1){
 writeLines(Query_output_dist)
 ```
 
-```{r echo=FALSE, results='asis'}
-crit_table<-table_crit(ClippedCritHab_sf, studyArea, leatherback_sf)
+```{r leatherback table, echo=FALSE, results='asis'}
+crit_table <- table_crit(ClippedCritHab_sf, studyArea, leatherback_sf)
 ```
 *
 ```{r crit result, comment="", prompt=TRUE, echo=FALSE, results='asis'}
- crit_result<-nrow(crit_table)
- Query_output_crit<-if(crit_result < 1){
+ crit_result <- nrow(crit_table)
+ Query_output_crit <- if(crit_result < 1){
    "La zone de recherche ne chevauche pas l’habitat essentiel défini des espèces en péril."
  } else {
    "La zone de recherche chevauche l’habitat essentiel défini des espèces en péril."
@@ -64,62 +64,62 @@ crit_table<-table_crit(ClippedCritHab_sf, studyArea, leatherback_sf)
  writeLines(Query_output_crit)
 ```
 
-```{r echo=FALSE, results='asis'}
-Dist_query_output_table<-if(Dist_overlap_result < 1){
+```{r dist?, echo=FALSE, results='asis'}
+Dist_query_output_table <- if(Dist_overlap_result < 1){
   ""
 } else {
 }
 if(Dist_overlap_result > 1){Dist_query_output_table}
 ```
 
-```{r echo=FALSE, results='asis'}
+```{r crithab table, echo=FALSE, results='asis'}
 crit_table <- unique( crit_table[ , 1:3 ] )
-Crithab_query_output_table<-if(crit_result <= 1){
+Crithab_query_output_table <- if(crit_result <= 1){
   ""
 } else {
-  knitr::kable(crit_table, caption="Niveau de qualité : Élevée. Niveau de sécurité : Aucun. Espèces en péril inscrites comme en voie de disparition ou menacées en vertu de la LEP pour lesquelles le polygone de recherche chevauche leur habitat essentiel. Selon la définition de l’article 2 de la LEP, l’habitat essentiel est en fait « l’habitat nécessaire à la survie ou au rétablissement d’une espèce sauvage inscrite, qui est désigné comme tel dans un programme de rétablissement ou un plan d’action élaboré à l’égard de l’espèce ». L’habitat essentiel est désigné dans un programme de rétablissement final ou un plan d’action publié dans le Registre public des espèces en péril (http://www.sararegistry.gc.ca). Il ne s’agit <b>pas</b> d’une source ni d’un conseil faisant autorité en ce qui concerne les données sur les espèces en péril. Veuillez accéder au SIG des espèces en péril (http://dfonl7swvgip001.ent.dfo-mpo.ca/Html5Viewer/index.html?viewer=NationalSARMap_EN&LayerTheme=0&locale=en-US) pour créer un rapport faisant autorité.", booktabs = T, escape = F, linesep="")} %>% kable_styling(bootstrap_options = "striped", full_width = T, position = "left")
+  knitr::kable(crit_table, caption="Niveau de qualité : Élevée. Niveau de sécurité : Aucun. Espèces en péril inscrites comme en voie de disparition ou menacées en vertu de la LEP pour lesquelles le polygone de recherche chevauche leur habitat essentiel. Selon la définition de l’article 2 de la LEP, l’habitat essentiel est en fait « l’habitat nécessaire à la survie ou au rétablissement d’une espèce sauvage inscrite, qui est désigné comme tel dans un programme de rétablissement ou un plan d’action élaboré à l’égard de l’espèce ». L’habitat essentiel est désigné dans un programme de rétablissement final ou un plan d’action publié dans le Registre public des espèces en péril (http://www.sararegistry.gc.ca). Il ne s’agit <b>pas</b> d’une source ni d’un conseil faisant autorité en ce qui concerne les données sur les espèces en péril. Veuillez accéder au SIG des espèces en péril (http://dfonl7swvgip001.ent.dfo-mpo.ca/Html5Viewer/index.html?viewer=NationalSARMap_EN&LayerTheme=0&locale=en-US) pour créer un rapport faisant autorité.", booktabs = T, escape = F, linesep = "")} %>% kable_styling(bootstrap_options = "striped", full_width = T, position = "left")
 if(crit_result > 0){Crithab_query_output_table}
 ```
 
 
-```{r echo=FALSE, results='asis'}
+```{r crithab plot setup, echo=FALSE, results='asis'}
 # define polygon dataset and attribute to plot
-poly_sf=ClippedCritHab_sf
-attribute="Common_Nam"
+poly_sf <- ClippedCritHab_sf
+attribute <- "Common_Nam"
 
 # intersect polyData with 3 polygons (region, map area, and study box)
-clipped <- poly_intersect(poly_sf,Region,studyArea, bboxMap)
+clipped <- poly_intersect(poly_sf, Region, studyArea, bboxMap)
 ```
 
-```{r, fig.cap='Niveau de qualité : Élevée. Niveau de sécurité : Aucun. Cette carte résume l’habitat essentiel des espèces en péril inscrites comme en voie de disparition ou menacées en vertu de la LEP de la biorégion du plateau néo-écossais. Veuillez consulter le tableau ci-dessous pour l’information complémentaire. Selon la définition de l’article 2 de la LEP, l’habitat essentiel est en fait « l’habitat nécessaire à la survie ou au rétablissement d’une espèce sauvage inscrite, qui est désigné comme tel dans un programme de rétablissement ou un plan d’action élaboré à l’égard de l’espèce ». L’habitat essentiel est désigné dans un programme de rétablissement final ou un plan d’action publié dans le Registre public des espèces en péril (http://www.sararegistry.gc.ca). Il ne s’agit <b>pas</b> d’une source ni d’un conseil faisant autorité en ce qui concerne les données sur les espèces en péril. Veuillez accéder au SIG des espèces en péril (http://dfonl7swvgip001.ent.dfo-mpo.ca/Html5Viewer/index.html?viewer=NationalSARMap_EN&LayerTheme=0&locale=en-US) pour créer un rapport faisant autorité.', fig.height=6, fig.width=11}
+```{r crithab region plot, fig.cap='Niveau de qualité : Élevée. Niveau de sécurité : Aucun. Cette carte résume l’habitat essentiel des espèces en péril inscrites comme en voie de disparition ou menacées en vertu de la LEP de la biorégion du plateau néo-écossais. Veuillez consulter le tableau ci-dessous pour l’information complémentaire. Selon la définition de l’article 2 de la LEP, l’habitat essentiel est en fait « l’habitat nécessaire à la survie ou au rétablissement d’une espèce sauvage inscrite, qui est désigné comme tel dans un programme de rétablissement ou un plan d’action élaboré à l’égard de l’espèce ». L’habitat essentiel est désigné dans un programme de rétablissement final ou un plan d’action publié dans le Registre public des espèces en péril (http://www.sararegistry.gc.ca). Il ne s’agit <b>pas</b> d’une source ni d’un conseil faisant autorité en ce qui concerne les données sur les espèces en péril. Veuillez accéder au SIG des espèces en péril (http://dfonl7swvgip001.ent.dfo-mpo.ca/Html5Viewer/index.html?viewer=NationalSARMap_EN&LayerTheme=0&locale=en-US) pour créer un rapport faisant autorité.', fig.height=6, fig.width=11}
 if (!is.null(clipped$regionPoly)){
-  plot_polygons(regionMap,regionBox,studyBox_geom, clipped$regionPoly,attribute)
+  plot_polygons(regionMap, regionBox, studyBox_geom, clipped$regionPoly, attribute)
 }  
 ```
 
-```{r, fig.cap='Niveau de qualité : Élevée. Niveau de sécurité : Aucun. Cette carte résume les zones où le polygone de recherche chevauche l’habitat essentiel des espèces en péril inscrites comme en voie de disparition ou menacées en vertu de la LEP', fig.height=6, fig.width=11}
+```{r crithab area plot, fig.cap='Niveau de qualité : Élevée. Niveau de sécurité : Aucun. Cette carte résume les zones où le polygone de recherche chevauche l’habitat essentiel des espèces en péril inscrites comme en voie de disparition ou menacées en vertu de la LEP', fig.height=6, fig.width=11}
 if (!is.null(clipped$mapPoly)){
-  plot_polygons(areaMap, bboxMap, studyBox_geom, clipped$mapPoly,attribute)
+  plot_polygons(areaMap, bboxMap, studyBox_geom, clipped$mapPoly, attribute)
 }  
 ```
 
-```{r echo=FALSE, results='asis'}
+```{r leatherback plot setup, echo=FALSE, results='asis'}
 # define polygon dataset and attribute to plot
-poly_sf=leatherback_sf
-attribute="NONE"
+poly_sf <- leatherback_sf
+attribute <- "NONE"
 
 # intersect polyData with 3 polygons (region, map area, and study box)
-clipped <- poly_intersect(poly_sf,Region,studyArea, bboxMap)
+clipped <- poly_intersect(poly_sf, Region, studyArea, bboxMap)
 ```
 
-```{r, fig.cap='Niveau de qualité : Élevée. Niveau de sécurité : Aucun. Cette carte résume l’ébauche de l’habitat essentiel de la tortue luth de la biorégion du plateau néo-écossais, par rapport à la zone de recherche. ', fig.height=6, fig.width=11}
+```{r letherback region plot, fig.cap='Niveau de qualité : Élevée. Niveau de sécurité : Aucun. Cette carte résume l’ébauche de l’habitat essentiel de la tortue luth de la biorégion du plateau néo-écossais, par rapport à la zone de recherche. ', fig.height=6, fig.width=11}
 if (!is.null(clipped$regionPoly)){
-  plot_polygons(regionMap,regionBox,studyBox_geom, clipped$regionPoly,attribute)
+  plot_polygons(regionMap, regionBox, studyBox_geom, clipped$regionPoly, attribute)
 }   
 ```
 
-```{r, fig.cap='Niveau de qualité : Élevée. Niveau de sécurité : Aucun. Cette carte résume les zones où le polygone de recherche chevauche  l’ébauche de l’habitat essentiel de la tortue luth.', fig.height=6, fig.width=11}
+```{r leatherback area plot, fig.cap='Niveau de qualité : Élevée. Niveau de sécurité : Aucun. Cette carte résume les zones où le polygone de recherche chevauche  l’ébauche de l’habitat essentiel de la tortue luth.', fig.height=6, fig.width=11}
 if (!is.null(clipped$mapPoly)){
-  plot_polygons(areaMap, bboxMap, studyBox_geom, clipped$mapPoly,attribute)
+  plot_polygons(areaMap, bboxMap, studyBox_geom, clipped$mapPoly, attribute)
 }  
 ```
