--- a/app/Rmd/report_habitat_EN.Rmd
+++ b/app/Rmd/report_habitat_EN.Rmd
@@ -23,25 +23,25 @@ Data notes:
 
 ```{r overlap rockweed, echo=FALSE, results='asis'}
 # define polygon dataset and attribute to plot
-poly_sf=rockweed_sf
-attribute="RWP"
+poly_sf <- rockweed_sf
+attribute <- "RWP"
 
 # intersect polyData with 3 polygons (region, map area, and study box)
-clipped <- poly_intersect(poly_sf,Region,studyArea, bboxMap)
+clipped <- poly_intersect(poly_sf, Region, studyArea, bboxMap)
 ```
 *
 ```{r overlap rockweed output, echo=FALSE, results='asis'}
  
-polyText<-if(is.null(clipped$studyPoly)){"There are no relevant records of predicted intertidal vegetation for this search area."
+polyText <- if(is.null(clipped$studyPoly)){"There are no relevant records of predicted intertidal vegetation for this search area."
 } else {"There are relevant records of predicted intertidal vegetation for this search area."}
 
- polyText<-noquote(polyText)
+ polyText <- noquote(polyText)
  writeLines(polyText)
 ```
 
-```{r, fig.height=8, fig.width=11, fig.cap='Quality Tier: Medium. Security level: none. Map showing the search area defined by the user: location of the proposed project/activity is highlighted in yellow (input polygon), surrounded by an exposure zone or user-defined buffer area in blue. Figure shows overlap between the search area and satellite-based maps of intertidal vegetation and rockweed presence polygons.'}
+```{r rockweed plot, fig.height=8, fig.width=11, fig.cap='Quality Tier: Medium. Security level: none. Map showing the search area defined by the user: location of the proposed project/activity is highlighted in yellow (input polygon), surrounded by an exposure zone or user-defined buffer area in blue. Figure shows overlap between the search area and satellite-based maps of intertidal vegetation and rockweed presence polygons.'}
 if(!is.null(clipped$studyPoly)){print(
-  plot_polygons(areaMap,bboxMap,studyBox_geom, clipped$mapPoly,attribute))}
+  plot_polygons(areaMap, bboxMap, studyBox_geom, clipped$mapPoly, attribute))}
 ```
 
 ```{r table rockweed, echo=FALSE, cache=FALSE, include = FALSE}
@@ -49,10 +49,10 @@ if(!is.null(clipped$studyPoly)){
   rwTable <- rockweedStats(clipped$studyPoly, studyArea)}
 ```
 
-```{r}
+```{r rockweed table}
 if(!is.null(clipped$studyPoly)){
 knitr::kable(rwTable,align="l",
-             caption = "Number of vegetation polygons and surface area occupied by each category for the study area. Total intertidal vegetations is a sum of all categories.", booktabs = T, escape = F, linesep="") %>%
+             caption = "Number of vegetation polygons and surface area occupied by each category for the study area. Total intertidal vegetations is a sum of all categories.", booktabs = T, escape = F, linesep = "") %>%
   kable_styling(bootstrap_options = "striped", full_width = T, position = "left")
 } 
 ```
