--- a/app/Rmd/report_planning_EN.Rmd
+++ b/app/Rmd/report_planning_EN.Rmd
@@ -18,27 +18,27 @@ Dataset description from the Open Data record [@OpenData_ebsa]: Ecologically and
 #### ***Area-specific EBSA search results***  
 
 *
-```{r echo=FALSE, results='asis'}
+```{r EBSA overlap, echo=FALSE, results='asis'}
 #function for overlap
 EBSA_overlap(EBSA_sf, studyArea)
 ```
 
-```{r echo=FALSE, results='asis'}
+```{r EBSA report, echo=FALSE, results='asis'}
 #function for report
 EBSA_report(EBSA_sf, studyArea)
 ```
 
-```{r echo=FALSE, results='asis'}
+```{r EBSA report url, echo=FALSE, results='asis'}
 #function for report url
 EBSA_reporturl(EBSA_sf, studyArea)
 ```
 
-```{r echo=FALSE, results='asis'}
+```{r EBSA loc, echo=FALSE, results='asis'}
 #function for location
 EBSA_location(EBSA_sf, studyArea)
 ```
 
-```{r echo=FALSE, results='asis'}
+```{r EBSA bioregion, echo=FALSE, results='asis'}
 #function for bioregion
 EBSA_bioregion(EBSA_sf, studyArea)
 ```
@@ -51,13 +51,13 @@ attribute="NONE"
 clipped <- poly_intersect(poly_sf, Region, studyArea, bboxMap)
 ```
 
-```{r, fig.height=8, fig.width=11, fig.cap= 'Quality Tier: High. Security level: none. Map showing Ecologically and Biologically Significant Areas (EBSA) relative to the search area defined by the user (red outline).'}
+```{r EBSA region plot, fig.height=8, fig.width=11, fig.cap= 'Quality Tier: High. Security level: none. Map showing Ecologically and Biologically Significant Areas (EBSA) relative to the search area defined by the user (red outline).'}
 if (!is.null(clipped$regionPoly)){
   plot_polygons(regionMap, regionBox, studyBox_geom, clipped$regionPoly, attribute)
 }
 ```
 
-```{r, fig.height=8, fig.width=11, fig.cap= 'Quality Tier: High. Security level: none. Map showing Ecologically and Biologically Significant Areas (EBSA) in the search area defined by the user (red outline).'}
+```{r EBSA area plot, fig.height=8, fig.width=11, fig.cap= 'Quality Tier: High. Security level: none. Map showing Ecologically and Biologically Significant Areas (EBSA) in the search area defined by the user (red outline).'}
 if(!is.null(clipped$studyPoly)){print(
   plot_polygons(areaMap,bboxMap,studyBox_geom, clipped$mapPoly,attribute))}
 ```
